[gd_scene load_steps=13 format=3 uid="uid://bif5kdskjyach"]

[ext_resource type="Theme" uid="uid://d0juxhgobuuv2" path="res://Assets/FlatUI/kenneyUI-green.tres" id="1_77oul"]
[ext_resource type="Script" path="res://Scripts/Leaderboard.gd" id="1_f44o7"]
[ext_resource type="FontFile" uid="uid://dikb6kaq6rwap" path="res://Assets/Fonts/kenvector_future.ttf" id="2_10um7"]
[ext_resource type="Theme" uid="uid://10bfrd2i470b" path="res://Assets/FlatUI/kenneyUI-red.tres" id="3_ih35i"]
[ext_resource type="Texture2D" uid="uid://b8u331l01iid" path="res://Assets/Background/background_color.png" id="5_0agny"]

[sub_resource type="Theme" id="Theme_q6keo"]
default_font = ExtResource("2_10um7")
default_font_size = 45

[sub_resource type="Theme" id="Theme_1oumw"]
default_font_size = 6

[sub_resource type="FontVariation" id="FontVariation_5bygl"]

[sub_resource type="Theme" id="Theme_ilslj"]
default_font = ExtResource("2_10um7")
default_font_size = 20

[sub_resource type="FontVariation" id="FontVariation_41cvx"]

[sub_resource type="FontVariation" id="FontVariation_jytkp"]

[sub_resource type="FontVariation" id="FontVariation_ecdow"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 7.0
offset_top = 202.0
offset_right = 7.0
offset_bottom = 202.0
script = ExtResource("1_f44o7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = -14.0
offset_right = 1727.0
offset_bottom = 518.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 163.0
offset_top = -4.0
offset_right = 1713.0
offset_bottom = 508.0
color = Color(0.0588235, 0.568627, 0, 1)

[node name="Back2" type="Button" parent="."]
layout_mode = 2
offset_left = 878.0
offset_top = 640.0
offset_right = 1079.0
offset_bottom = 726.0
theme = ExtResource("1_77oul")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
text = "Tilbage"

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 891.0
offset_top = 561.0
offset_right = 1037.0
offset_bottom = 626.0
text = "Refresh"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 724.0
offset_top = -89.0
offset_right = 1131.0
offset_bottom = -20.0
theme = SubResource("Theme_q6keo")
text = "LEADERBOARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 163.0
offset_top = -6.0
offset_right = 1713.0
offset_bottom = 532.0
theme = ExtResource("3_ih35i")

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(2.08165e-12, 500)
layout_mode = 2

[node name="Level1" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 500)
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Level1"]
custom_minimum_size = Vector2(2.08165e-12, 75)
layout_mode = 2
theme = SubResource("Theme_1oumw")
theme_override_fonts/font = SubResource("FontVariation_5bygl")
theme_override_font_sizes/font_size = 30
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer/Level1"]
custom_minimum_size = Vector2(2.08165e-12, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/HBoxContainer/Level1"]
custom_minimum_size = Vector2(2.08165e-12, 425)
layout_mode = 2

[node name="Username" type="VBoxContainer" parent="ScrollContainer/HBoxContainer/Level1/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="usernameLabel" type="Label" parent="ScrollContainer/HBoxContainer/Level1/HBoxContainer/Username"]
layout_mode = 2
theme = SubResource("Theme_ilslj")
theme_override_fonts/font = SubResource("FontVariation_41cvx")
text = "Brugernavn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer/Level1/HBoxContainer/Username"]
custom_minimum_size = Vector2(2.08165e-12, 5)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer/Level1/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Score" type="VBoxContainer" parent="ScrollContainer/HBoxContainer/Level1/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2

[node name="scoreLabel" type="Label" parent="ScrollContainer/HBoxContainer/Level1/HBoxContainer/Score"]
layout_mode = 2
theme = SubResource("Theme_ilslj")
theme_override_fonts/font = SubResource("FontVariation_jytkp")
text = "Points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer/Level1/HBoxContainer/Score"]
custom_minimum_size = Vector2(2.08165e-12, 5)
layout_mode = 2

[node name="split" type="ColorRect" parent="ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 661.0
offset_top = 135.0
offset_right = 1068.0
offset_bottom = 187.0
theme = SubResource("Theme_q6keo")
theme_override_fonts/font = SubResource("FontVariation_ecdow")
text = "Henter data..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -99

[node name="BackgroundTextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 2616.0
offset_bottom = 1685.0
texture = ExtResource("5_0agny")

[connection signal="pressed" from="Back2" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
